[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/Robot Body.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/Ball02/Ball02.gd" type="Script" id=2]
[ext_resource path="res://assets/images/Robot Face Expression Good.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Robot Face.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Robot Face Expression Sad.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/hit_2.wav" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 35.0

[node name="Ball" type="RigidBody2D" groups=[
"Ball",
"Deletable",
]]
input_pickable = true
collision_mask = 123
physics_material_override = SubResource( 1 )
continuous_cd = 1
contacts_reported = 10
contact_monitor = true
sleeping = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MonitorSprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.7 )
z_index = 1
texture = ExtResource( 4 )

[node name="FaceNormalSprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 3 )

[node name="FaceSadSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 5 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 3 )

[node name="FaceTimer" type="Timer" parent="."]
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="mouse_entered" from="InteractionArea" to="." method="_on_InteractionArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractionArea" to="." method="_on_InteractionArea_mouse_exited"]
[connection signal="timeout" from="FaceTimer" to="." method="_on_FaceTimer_timeout"]
